# terraria-panel

./: .gitignore  README.en.md  README.md  dev-config.toml
backend/: Cargo.toml  config.toml
backend/data/db/: terraria-console.db
backend/src/: config.rs  db.rs  error.rs  main.rs  websocket.rs
backend/src/auth/: jwt.rs  middleware.rs  mod.rs  password.rs
backend/src/handlers/: auth.rs  config.rs  console.rs  mod.rs  mods.rs  saves.rs  server.rs  system.rs  tshock.rs  tshock_rest.rs  version.rs
backend/src/models/: mod.rs  mod_info.rs  server.rs  server_config.rs  ssc_config.rs  user.rs
backend/src/services/: auto_backup.rs  backup_policy.rs  command_policy.rs  frp_config.rs  frp_manager.rs  frp_settings.rs  item_catalog.rs  mod.rs  mod_manager.rs  process_manager.rs  save_manager.rs  system_monitor.rs  telegram_bot.rs  tshock_rest.rs  version_manager.rs
frontend/: .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue
frontend/src/api/: auth.ts  index.ts  mods.ts  saves.ts  server.ts  system.ts  tshockRest.ts  version.ts
frontend/src/composables/: useNotification.ts  useWebSocket.ts
frontend/src/constants/: serverCommands.ts  terrariaBuffs.ts  tshockCommandCatalog.ts  tshockPermissionDescriptions.ts  tshockPermissions.ts
frontend/src/router/: index.ts
frontend/src/stores/: app.ts  auth.ts  servers.ts
frontend/src/styles/: global.css
frontend/src/views/: Dashboard.vue  Login.vue  ModManager.vue  SaveManager.vue  ServerDetail.vue  ServerList.vue  Settings.vue  UserManager.vue  VersionManager.vue
(+24 files in other folders)
