[package]
name = "terraria-console-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart", "ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
jsonwebtoken = "9"
argon2 = "0.5"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
tower = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
rand = "0.8"
zip = "0.6"
sysinfo = "0.30"
nix = { version = "0.28", features = ["signal", "process"] }
bytes = "1"
anyhow = "1"
